# haskell-tyrant

./: Constants.hs  Hyrant.hs  LICENSE  README.md  haskell-tyrant.cabal
Database/: TokyoTyrant.hs
Database/TokyoTyrant/: Constants.hs
tests/: Capitals.hs  Main.hs  test.lua  test.py
